manifests/service-1.yml
apiVersion: v1
kind: Service
metadata:
    name: "getstartedjava-3220"
    labels:
        app: "getstartedjava-3220"
spec:
    type: ClusterIP
    ports:
    - port: 9080
      targetPort: 9080
      protocol: TCP
      name: http
    selector:
        app: "getstartedjava-3220"
